using PY_VER in Makefile

--- a/ArrTest/Makefile
+++ b/ArrTest/Makefile
@@ -1,6 +1,8 @@
+PY_VER=3.4
 CXX=g++
 G=-g -O0
-FLAGS = `python3.5-config --cflags --ldflags`
+FLAGS = `python$(PY_VER)-config --cflags --ldflags` \
+	-I`python$(PY_VER) -c 'import numpy, sys; sys.stdout.write(numpy.get_include())'`
 
 all : DRAWTEST
 
