modify test programs

--- a/ArrTest/Makefile
+++ b/ArrTest/Makefile
@@ -10,5 +10,5 @@ DRAWTEST: main.cpp
 	$(CXX) $(G) -o $@ $< $(FLAGS)
 
 clean :
-	rm -fr DRAWTEST X.png *.pyc *.pyo __pycache__
+	rm -fr DRAWTEST X.png *.pyc *.pyo __pycache__ *.dSYM
 
