--- a/MicroEnv/Makefile
+++ b/MicroEnv/Makefile
@@ -1,16 +1,17 @@
 PY_VER=3.6
 CXX=g++
+MPICXX=mpicxx
 G=-g -O0
-CXXFLAGS = `python$(PY_VER)-config --cflags` \
+CXXFLAGS = `python$(PY_VER)-config --cflags | sed -e 's/-arch i386//'` \
 	-I`python$(PY_VER) -c 'import numpy, sys; sys.stdout.write(numpy.get_include())'`
 LDFLAGS=`python$(PY_VER)-config --ldflags`
 
 TARGET=Test
-TARGET2=Test2
-TARGET3=Test3
+TARGET2=StatTest
+TARGET3=MPI4PyTest
 OBJS = Test.o MicroEnv.o
-OBJS2 = Test2.o MicroEnv.o
-OBJS3 = Test3.o MicroEnv.o
+OBJS2 = StatTest.o 
+OBJS3 = MPI4PyTest.o 
 
 all : Test
 
@@ -21,9 +22,12 @@ $(TARGET2): $(OBJS2)
 	$(CXX) $(G) -o $@ $(OBJS2) $(LDFLAGS)
 
 $(TARGET3): $(OBJS3)
-	$(CXX) $(G) -o $@ $(OBJS3) $(LDFLAGS)
+	$(MPICXX) $(G) -o $@ $(OBJS3) $(LDFLAGS)
+
+MPI4PyTest.o : MPI4PyTest.cpp
+	$(MPICXX) $(G) -c $< $(CXXFLAGS)
 
 clean :
-	rm -fr *.o *.pyc *.pyo __pycache__
+	rm -fr *.o *.pyc *.pyo __pycache__ *.dSYM
 	rm -f $(TARGET) $(TARGET2) $(TARGET3)
 
