implement Pi2D::ImportAttrib

--- a/TestJSON/Makefile
+++ b/TestJSON/Makefile
@@ -6,8 +6,14 @@ LDFLAGS=../libPi2D.a `python$(PY_VER)-config --ldflags`
 
 .SUFFIXES: .cpp .o
 
-TestExport : TestExport.o
+TestExport : TestExport.o ../libPi2D.a
 	$(CXX) -o $@ $< $(LDFLAGS)
 
+TestImport : TestImport.o ../libPi2D.a
+	$(CXX) -o $@ $< $(LDFLAGS)
+
+Y.json : X.json
+	cat X.json | jq '.' > Y.json
+
 clean:
-	rm -rf *.o *.pyc X.json TestExport
+	rm -rf *.o *.pyc X.json Y.json TestExport
