--- a/ExecTest/Makefile2
+++ b/ExecTest/Makefile2
@@ -1,12 +1,13 @@
 G=-g
 CXX=g++
-CXXFLAGS=$(G) `$(PI2D_DIR)/Pi2D-config --cflags`
-LDFLAGS=`$(PI2D_DIR)/Pi2D-config --libs`
+CXXFLAGS=$(G) `$(PI2D_DIR)/bin/Pi2D-config --cflags`
+LDFLAGS=`$(PI2D_DIR)/bin/Pi2D-config --ldflags`
+LIBS=`$(PI2D_DIR)/bin/Pi2D-config --libs`
 
 .SUFFIXES: .cpp .o
 
-run : run.o ../libPi2D.a
-	$(CXX) -o $@ $< $(LDFLAGS)
+run : run.o
+	$(CXX) -o $@ $< $(LDFLAGS) $(LIBS)
 
 clean:
 	rm -rf *.o *.pyc run out*.png __pycache__
