--- a/sample/C/Makefile
+++ b/sample/C/Makefile
@@ -1,7 +1,7 @@
 ARCH=$(shell uname -s)
 G=-g
-FC=gfortran
-FFLAGS=$(G) `$(PI2D_DIR)/bin/Pi2D-config --cflags` -cpp
+CC=gcc
+CFLAGS=$(G) `$(PI2D_DIR)/bin/Pi2D-config --cflags`
 LDFLAGS=`$(PI2D_DIR)/bin/Pi2D-config --ldflags`
 ifeq ($(ARCH), Darwin)
 LIBS=`$(PI2D_DIR)/bin/Pi2D-config --libs` -lc++
@@ -9,13 +9,13 @@ else
 LIBS=`$(PI2D_DIR)/bin/Pi2D-config --libs` -lstdc++
 endif
 
-.SUFFIXES: .f90 .o
+.SUFFIXES: .c .o
 
-.f90.o:
-	$(FC) $(FFLAGS) -c $<
+.c.o :
+	$(CC) $(CFLAGS) -c $<
 
 Test : Test.o
-	$(FC) -o $@ $< $(LDFLAGS) $(LIBS)
+	$(CXX) -o $@ $< $(LDFLAGS) $(LIBS)
 
 clean:
 	rm -rf *.o *.pyc Test out*.png __pycache__
